<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_best_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_best_m" />

        <Button
            android:id="@+id/btn_best_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_best_p" />

        <Button
            android:id="@+id/btn_best_g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_best_g" />

        <Button
            android:id="@+id/btn_best_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_best_d" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flex_mybest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            apps:flexWrap="wrap"
            apps:justifyContent="space_around"
            apps:alignItems="stretch"
            apps:alignContent="stretch">

        </com.google.android.flexbox.FlexboxLayout>
    </ScrollView>

</LinearLayout>