<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_profile_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="()"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_profile_comment"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_profile_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gra_profilev"
                android:elevation="0dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="GF"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_profile_gfskill"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0000.00"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="DM"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_profile_dmskill"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0000.00"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/middlebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_profile_gfskill_target"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_profile_gfskill_target" />
                <Button
                    android:id="@+id/btn_profile_dmskill_target"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_profile_dmskill_target" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_profile_gfskill_all"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_profile_gfskill_all" />
                <Button
                    android:id="@+id/btn_profile_dmskill_all"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_profile_dmskill_all" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_profile_mybest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_profile_mybest" />

            <Button
                android:id="@+id/btn_profile_cleartable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_profile_cleartable" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/lowertable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:text="GuitarFreaks"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:text="DrumMania"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:text="@string/tv_profile_skill"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_profile_table_gskill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_profile_table_dskill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:text="@string/tv_profile_clear"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_profile_table_gclear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_profile_table_dclear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:text="@string/tv_profile_fc"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_profile_table_gfc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_profile_table_dfc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:text="@string/tv_profile_exc"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_profile_table_gexc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_profile_table_dexc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:text="@string/tv_profile_cnt"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_profile_table_gcnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_profile_table_dcnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:padding="2dp"
                    android:textAlignment="center" />
            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/iv_profile_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/empty" />
    </LinearLayout>
</ScrollView>